fixed modal overlap and moved alerts to center

--- a/app/assets/stylesheets/components/_alert.scss
+++ b/app/assets/stylesheets/components/_alert.scss
@@ -1,7 +1,10 @@
 .alert {
   position: absolute;
-  top: 90px;
-  left: 16px;
-  font-size: 18px;
+  margin: 0 auto;
+  top: 550px;
+  left: 70px;
+  font-size: 32px;
   z-index: 1000;
+  padding: 50px;
+  border-radius: 15px;
 }
